--- a/mover.gui/MainWindow.axaml
+++ b/mover.gui/MainWindow.axaml
@@ -2,6 +2,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Mouse Emulator" Width="300" Height="150">
     <Grid>
-        <Button Content="Start Emulation" HorizontalAlignment="Center" VerticalAlignment="Center" ClickEvent="StartEmulation_Click"/>
+        <Button Content="Start Emulation" HorizontalAlignment="Center" VerticalAlignment="Center" Click="StartEmulation_Click"/>
     </Grid>
 </Window>
