--- a/mover.gui/MainWindow.axaml
+++ b/mover.gui/MainWindow.axaml
@@ -1,7 +1,12 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Mouse Emulator" Width="300" Height="150">
+        Title="Mouse Emulator" Width="300" Height="150"
+		xmlns:vm="using:mover.gui">
     <Grid>
-        <Button Content="Start Emulation" HorizontalAlignment="Center" VerticalAlignment="Center" Click="StartEmulation_Click"/>
+        <Button Click="OnStartEmulationClick"
+				Content="Start Emulation"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				x:Name="btnStartEmulation"/>
     </Grid>
 </Window>
