--- a/mover.gui/MainWindow.axaml
+++ b/mover.gui/MainWindow.axaml
@@ -5,11 +5,23 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="NoP77svk.Mover.Gui.MainWindow"
         Title="Mouse Emulator" Width="300" Height="150">
+
+    <Window.Styles>
+        <Style Selector="ToggleButton#btnToggleEmulation">
+            <Setter Property="Content" Value="Start emulation"/>
+            <Style Selector="^:checked">
+                <Setter Property="Content" Value="Stop emulation"/>
+            </Style>
+        </Style>
+    </Window.Styles>
+
     <Grid>
-        <Button Click="OnStartEmulationClick"
-				Content="Start Emulation"
-				HorizontalAlignment="Center"
-				VerticalAlignment="Center"
-				x:Name="btnStartEmulation"/>
+        <ToggleButton
+            x:Name="btnToggleEmulation"
+            Checked="OnStartEmulation"
+            Unchecked="OnStopEmulation"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            IsChecked="False"/>
     </Grid>
 </Window>
